--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Compiled class file
 *.class
 *.classpath
+*.settings
 *.project
 # Log file
 *.log
@@ -21,3 +22,4 @@
 *.zip
 *.tar.gz
 *.rar
+/target/
